feat(admin-reservations): implement global reservation fetching, filtering, and summary endpoints